第二次推送，修改第一次推送中的错误

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -11,7 +11,7 @@ log4j.appender.stdout.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %c.
 
 ### info\uFFFD\uFFFDlog ###
 log4j.appender.I = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.I.File = logs/all.log
+log4j.appender.I.File = logs/info.log
 log4j.appender.I.Append = true
 log4j.appender.I.Threshold = info
 log4j.appender.I.layout = org.apache.log4j.PatternLayout
@@ -20,7 +20,7 @@ log4j.appender.I.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] 
 
 #### error\uFFFD\uFFFDlog ###
 log4j.appender.E = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.E.File = logs/all.log
+log4j.appender.E.File = logs/error.log
 log4j.appender.E.Append = true
 log4j.appender.E.Threshold = warn
 log4j.appender.E.layout = org.apache.log4j.PatternLayout
